--- a/projectsite/template/templates/components/sidebar.html
+++ b/projectsite/template/templates/components/sidebar.html
@@ -66,7 +66,7 @@
   </div>
   <div class="offcanvas-body d-flex flex-column gap-2">
     {% for item in menu_items %}
-      <a class="nav-pill {% if current_page == item.id %}active{% endif %}" href="{% url item.url_name %}">
+      <a class="nav-pill {% if current_page == item.id %}active{% endif %}" href="{% url item.url_name %}" data-bs-dismiss="offcanvas">
         <i data-lucide="{{ item.icon }}"></i>
         <span>{{ item.label }}</span>
       </a>
