fixed split tag in profile.index.html

--- a/projectsite/template/templates/profile/index.html
+++ b/projectsite/template/templates/profile/index.html
@@ -35,8 +35,7 @@
           </span>
         </div>
         <p class="text-white-75 mt-3 mb-0 profile-bio">
-          {{ profile.bio|default:"Passionate about helping fellow students with
-          math and programming. Always happy to share knowledge!" }}
+          {{ profile.bio|default:"Passionate about helping fellow students with math and programming. Always happy to share knowledge!" }}
         </p>
       </div>
       <div class="ms-lg-auto">
