added template tag

--- a/projectsite/template/templates/map/index.html
+++ b/projectsite/template/templates/map/index.html
@@ -2,6 +2,7 @@
 {% block title %}Map View | PeerHelp{% endblock %}
 {% block body_class %}map-page{% endblock %}
 {% block content %}
+{% load static %}
 <section class="page-header mb-4">
   <div>
     <h1 class="h2 text-gray-900 mb-2">In-Person Requests</h1>
