--- a/projectsite/template/templates/problems/location_picker.html
+++ b/projectsite/template/templates/problems/location_picker.html
@@ -1,3 +1,4 @@
+{% load static %}
 {% extends "base.html" %}
 {% block title %}Pick Meeting Location | PeerHelp{% endblock %}
 {% block extra_css %}
