--- a/projectsite/template/templates/problems/location_picker.html
+++ b/projectsite/template/templates/problems/location_picker.html
@@ -7,6 +7,7 @@
 {% endblock %}
 {% block extra_js %}
   {{ block.super }}
+  <script src="https://maps.googleapis.com/maps/api/js?key={{ google_maps_api_key }}&callback=initMap" async defer></script>
   <script src="{% static 'js/location-picker.js' %}" defer></script>
 {% endblock %}
 {% block content %}
